.metadata/.plugins/org.eclipse.cdt.ui/BLE_p2p_nucleo.build.log
10:27:03 **** Incremental Build of configuration Debug for project BLE_p2p_nucleo ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/app_debug.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32WB55xx -c -I../Core/Inc -I../STM32_WPAN -I../Utilities -I../Drivers/STM32WBxx_HAL_Driver/Inc -I../Drivers/STM32WBxx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32WBxx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/app_debug.d" -MT"Core/Src/app_debug.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/app_debug.o"
arm-none-eabi-gcc "../Core/Src/app_entry.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32WB55xx -c -I../Core/Inc -I../STM32_WPAN -I../Utilities -I../Drivers/STM32WBxx_HAL_Driver/Inc -I../Drivers/STM32WBxx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32WBxx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/app_entry.d" -MT"Core/Src/app_entry.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/app_entry.o"
arm-none-eabi-gcc "../Core/Src/stm32wbxx_hal_msp.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32WB55xx -c -I../Core/Inc -I../STM32_WPAN -I../Utilities -I../Drivers/STM32WBxx_HAL_Driver/Inc -I../Drivers/STM32WBxx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32WBxx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/stm32wbxx_hal_msp.d" -MT"Core/Src/stm32wbxx_hal_msp.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/stm32wbxx_hal_msp.o"
arm-none-eabi-gcc "../Core/shci.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32WB55xx -c -I../Core/Inc -I../STM32_WPAN -I../Utilities -I../Drivers/STM32WBxx_HAL_Driver/Inc -I../Drivers/STM32WBxx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32WBxx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/shci.d" -MT"Core/shci.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/shci.o"
../Core/shci.c:24:10: fatal error: shci_tl.h: No such file or directory
   24 | #include "shci_tl.h"
      |          ^~~~~~~~~~~
compilation terminated.
make: *** [Core/subdir.mk:19: Core/shci.o] Error 1
make: *** Waiting for unfinished jobs....
../Core/Src/stm32wbxx_hal_msp.c: In function 'HAL_UART_MspInit':
../Core/Src/stm32wbxx_hal_msp.c:99:27: error: 'STLINK_RX_Pin' undeclared (first use in this function)
   99 |     GPIO_InitStruct.Pin = STLINK_RX_Pin|STLINK_TX_Pin;
      |                           ^~~~~~~~~~~~~
../Core/Src/stm32wbxx_hal_msp.c:99:27: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/stm32wbxx_hal_msp.c:99:41: error: 'STLINK_TX_Pin' undeclared (first use in this function)
   99 |     GPIO_InitStruct.Pin = STLINK_RX_Pin|STLINK_TX_Pin;
      |                                         ^~~~~~~~~~~~~
../Core/Src/app_debug.c:27:10: fatal error: shci.h: No such file or directory
   27 | #include "shci.h"
      |          ^~~~~~~~
compilation terminated.
../Core/Src/app_entry.c:26:10: fatal error: app_ble.h: No such file or directory
   26 | #include "app_ble.h"
      |          ^~~~~~~~~~~
compilation terminated.
make: *** [Core/Src/subdir.mk:55: Core/Src/app_debug.o] Error 1
../Core/Src/stm32wbxx_hal_msp.c: In function 'HAL_UART_MspDeInit':
../Core/Src/stm32wbxx_hal_msp.c:133:28: error: 'STLINK_RX_Pin' undeclared (first use in this function)
  133 |     HAL_GPIO_DeInit(GPIOB, STLINK_RX_Pin|STLINK_TX_Pin);
      |                            ^~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:57: Core/Src/app_entry.o] Error 1
../Core/Src/stm32wbxx_hal_msp.c:133:42: error: 'STLINK_TX_Pin' undeclared (first use in this function)
  133 |     HAL_GPIO_DeInit(GPIOB, STLINK_RX_Pin|STLINK_TX_Pin);
      |                                          ^~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:71: Core/Src/stm32wbxx_hal_msp.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

10:27:07 Build Failed. 12 errors, 0 warnings. (took 4s.406ms)

